# PAP-Forge-Audio

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
containers/juce_builder/: Dockerfile
docs/: architecture.md  bootstrap.md  cli_control_runtime.md  cli_daw_control.md  daw_transport_control.md  dsp_policy.md  operations.md  plugin_ui_runtime.md  release_checklist.md  repo_map.md  reproducible_build_state.md  review_and_mapping.md  roadmap.md  runtime_to_pap_mapping.md  spec_contracts.md
examples/: control_timeline.json  prompt_library.json
scripts/: pap_build_in_container.py
src/lucipher_plugin_forge/: __init__.py  checkpoints.py  cli.py  project.py  specs.py  templates.py
src/pap/: __init__.py  api.py  artifacts.py  bootstrap.py  branches.py  builds.py  checkpoints.py  cli.py  compare.py  contracts.py  control.py  control_daemon.py  graph.py  manifests.py  preview.py  project.py  reproducible.py  specs.py  templates.py  validators.py
templates/juce_effect_basic/: CMakeLists.txt
templates/juce_effect_basic/Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
templates/juce_effect_basic/pap/: TemplateNotes.txt
templates/juce_synth_basic/: CMakeLists.txt
templates/juce_synth_basic/Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
templates/juce_synth_basic/pap/: TemplateNotes.txt
tests/: test_bootstrap_report.py  test_control_runtime.py  test_forge.py  test_ui_runtime.py
