[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pap-forge"
version = "1.3.0"
description = "PAP Forge — Procedural Autonomous Plugins governed generation and checkpoint runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30", "pydantic>=2.7"]

[project.scripts]
pap = "pap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
